# Playdate-test

./: .clangd  .gitignore  .gitmodules  build.ps1  compile_commands.json
game/: CMakeLists.txt
game/.cache/clangd/index/: game.c.8C0B71D8DE709C0B.idx  game.h.F36ED47A76D4F3F0.idx
game/include/: game.h
game/src/: game.c
platform/include/: platform.h
platform/playdate/: CMakeLists.txt  main.c
platform/playdate/game.pdx/: pdxinfo
platform/playdate/include/: playdate.h
platform/playdate/src/: platform.c
platform/win32/: CMakeLists.txt  build.ps1  main.c
platform/win32/include/: win32.h
platform/win32/src/: platform.c
